--- a/joggermujer.html
+++ b/joggermujer.html
@@ -16,6 +16,10 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v8.0"
         nonce="zwYJBzha"></script>
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v8.0"
+        nonce="9MxR2C5d"></script>
+
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-red fixed-top">
         <div class="container">
@@ -123,15 +127,17 @@
                 <h3 class="my-3">Tallas y coleres disponibles</h3>
                 <ul>
                     <button type="button" class="btn btn-info">S</button>
-                    <label style="width: 40px; float: right; height: 40px; background-color: #252850; border-radius: 100%;"></label>
+                    <label
+                        style="width: 40px; float: right; height: 40px; background-color: #252850; border-radius: 100%;"></label>
                 </ul>
                 <h3 class="my-3">Haz tu pedido </h3>
-                <a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-messenger btn btn-primary"
+                <a id="a" href="https://m.me/milagros.yarleque.169" target="_blank" class="icon-messenger btn btn-primary"
                     style="background-color: blue;" title="Abrir Mensaje de Menssenger">
                     Messenger</a>
                 <a id="a"
                     href="https://api.whatsapp.com/send?phone=51978532018&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?"" target="
-                    _blank" class="icon-whatsapp btn btn-success" style="background-color: green;" title="Enviar Mensaje de WhastsApp"> WhatsApp</a>
+                    _blank" class="icon-whatsapp btn btn-success" style="background-color: green;"
+                    title="Enviar Mensaje de WhastsApp"> WhatsApp</a>
             </div>
         </div>
         <!-- /.row -->
@@ -168,8 +174,20 @@
 
         </div>
         <!-- /.row -->
-        <div class="fb-comments" data-href="https://victorvera21.github.io/ventas-exclusivas/hombre.html"
-            data-numposts="5" data-width="" data-colorscheme="light" data-order-by="reverse_time"></div>
+
+        <div class="row">
+            <div class="col-md-7 col-sm-7 mb-4">
+                <div class="fb-comments" data-href="https://victorvera21.github.io/ventas-exclusivas/hombre.html"
+                    data-numposts="5" data-width="" data-colorscheme="light" data-order-by="reverse_time"></div>
+
+            </div>
+            <div class="col-md-5 col-sm-5 mb-4">
+                <div class="fb-page" data-href="https://www.facebook.com/Webtion-310781069600742/" data-width="380"
+                    data-hide-cover="false" data-show-facepile="false">
+                </div>
+            </div>
+
+        </div>
 
     </div>
     <!-- /.container -->
